<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backBlue"
    android:layout_margin="8dp">
    <TextView 
        android:id="@id/oficial"
        android:text="@string/oficial"
        android:paddingLeft="4dp"
        style="@style/Widget"/>
    <TextView 
        android:id="@id/buy"
        android:text="@string/buy"
        android:layout_toRightOf="@id/oficial"
        android:paddingLeft="4dp"
        style="@style/Widget"/>
    <TextView 
        android:id="@id/valueBuyOficial"
        android:layout_toRightOf="@id/buy"
        android:paddingLeft="15dp"
        style="@style/Widget"/>
    <TextView 
        android:id="@id/sell"
        android:text="@string/sell"
        android:layout_alignLeft="@id/buy"
        android:layout_below="@id/buy"
        android:paddingLeft="4dp"
        style="@style/Widget"/>
    <TextView 
        android:id="@id/valueSellOficial"
        android:layout_alignLeft="@id/valueBuyOficial"
        android:layout_below="@id/valueBuyOficial"
        android:paddingLeft="15dp"
        style="@style/Widget"/>
    <TextView 
        android:id="@id/blue"
        android:text="@string/blue"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sell"
        android:paddingLeft="4dp"
        style="@style/Widget"/>
    <TextView 
        android:id="@+id/buyBlue"
        android:text="@string/buy"
        android:layout_alignLeft="@id/buy"
        android:layout_below="@id/sell"     
        android:paddingLeft="4dp"
        style="@style/Widget"/>
    <TextView 
        android:id="@+id/sellBlue"
        android:text="@string/sell"
        android:layout_alignLeft="@id/buy"
        android:layout_below="@id/buyBlue"       
        android:paddingLeft="4dp"
        style="@style/Widget"/>
    <TextView 
        android:id="@id/valueBuyBlue"
        android:layout_alignLeft="@id/valueBuyOficial"
        android:layout_below="@id/valueSellOficial"
        android:paddingLeft="15dp"
        style="@style/Widget"/>
    <TextView 
        android:id="@id/valueSellBlue"
        android:layout_alignLeft="@id/valueBuyOficial"
        android:layout_below="@id/valueBuyBlue"
        android:paddingLeft="15dp"
        style="@style/Widget"/>
</RelativeLayout>